refactor: move from gradle to maven && added the model classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -61,3 +56,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+/target
